--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@supabase/supabase-js": "^2.44.2",
     "circletype": "^2.3.0",
     "classnames": "^2.3.2",
+    "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "framer-motion": "^7.6.5",
     "moment": "^2.30.1",
+    "motion": "^12.10.4",
     "next": "^14.2.4",
     "react": "^18.2.0",
     "react-countdown": "^2.3.3",
@@ -31,7 +33,8 @@
     "react-images": "^1.2.0-beta.7",
     "react-scroll": "^1.8.8",
     "react-spring": "^9.7.3",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
